--- a/css/style.css
+++ b/css/style.css
@@ -1116,42 +1116,42 @@ ul.list li:before {
   font: 300 18px/1.5 'Gilroy', sans-serif;
 }
 .wrapper main .inner .cost-block {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-top: 30px;
-}
-.wrapper main .inner .cost-block-item {
-  position: relative;
-  width: calc((100% - 30px)/2);
-  padding: 40px 60px 35px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 35px;
+  padding: 40px 60px 50px;
   background: #fbfbfb;
   border-radius: 20px;
+  -webkit-columns: 2;
+          columns: 2;
 }
-.wrapper main .inner .cost-block-item-badge {
-  position: absolute;
-  right: 25px;
-  top: -4px;
-  width: 25px;
-  height: 69px;
-  background: url(../img/icon_best.svg) no-repeat;
-  background-size: contain;
-}
-.wrapper main .inner .cost-block-item-title {
+.wrapper main .inner .cost-block-title {
+  width: 100%;
   font: 700 24px/1.3 'Gilroy', sans-serif;
+  margin-bottom: 15px;
+}
+.wrapper main .inner .cost-block-item {
+  width: calc(50% - 25px);
+  max-width: 470px;
+}
+.wrapper main .inner .cost-block-item:last-child {
+  margin-top: 17px;
 }
 .wrapper main .inner .cost-block-item-value {
   display: inline-block;
-  margin-top: 15px;
+  margin-right: 30px;
   font: 700 36px/1.3 'Gilroy', sans-serif;
   color: #f65e64;
 }
 .wrapper main .inner .cost-block-item-desc {
   display: inline-block;
-  margin-left: 30px;
   font: 300 14px/1.5 'Gilroy', sans-serif;
 }
 .wrapper main .inner .cost-block-item-table {
@@ -1161,7 +1161,7 @@ ul.list li:before {
   border-radius: 20px;
 }
 .wrapper main .inner .cost-block-item-table-title {
-  font: 700 22px/1.3 'Gilroy', sans-serif;
+  font: 700 20px/1.3 'Gilroy', sans-serif;
   margin-bottom: 10px;
 }
 .wrapper main .inner .cost-block-item-table-line {
@@ -1171,7 +1171,15 @@ ul.list li:before {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 10px 0;
+  border-bottom: 1px solid #e6e8e0;
+}
+.wrapper main .inner .cost-block-item-table-line:last-child {
+  padding-bottom: 0;
+  border-bottom: none;
 }
 .wrapper main .inner .cost-block-item-table-line-desc {
   font: 300 18px/1.5 'Gilroy', sans-serif;
@@ -1179,24 +1187,19 @@ ul.list li:before {
 .wrapper main .inner .cost-block-item-table-line-value {
   font: 700 24px/1.3 'Gilroy', sans-serif;
 }
-.wrapper main .inner .cost-block-item-table-list {
-  margin-top: 10px;
-  padding-top: 25px;
-  border-top: 1px solid #e6e8e0;
+.wrapper main .inner .cost-block-item-list-title {
+  font: 700 20px/1.2 'Gilroy', sans-serif;
 }
-.wrapper main .inner .cost-block-item-table-list-title {
-  font: 700 22px/1.2 'Gilroy', sans-serif;
-}
-.wrapper main .inner .cost-block-item-table-list ul {
-  margin-top: 20px;
+.wrapper main .inner .cost-block-item-list ul {
+  margin-top: 27px;
   margin-bottom: 0;
 }
-.wrapper main .inner .cost-block-item-table-list ul li {
+.wrapper main .inner .cost-block-item-list ul li {
   position: relative;
   padding-left: 20px;
   font: 300 18px/2 'Gilroy', sans-serif;
 }
-.wrapper main .inner .cost-block-item-table-list ul li:before {
+.wrapper main .inner .cost-block-item-list ul li:before {
   content: '';
   position: absolute;
   left: 0;
@@ -1208,7 +1211,7 @@ ul.list li:before {
   background: #f65e64;
   border-radius: 50%;
 }
-.wrapper main .inner .cost-block-item-table-list ul li .tooltip {
+.wrapper main .inner .cost-block-item-list ul li .tooltip {
   position: relative;
   display: inline-block;
   width: 20px;
@@ -1219,15 +1222,15 @@ ul.list li:before {
   cursor: pointer;
   z-index: auto;
 }
-.wrapper main .inner .cost-block-item-table-list ul li .tooltip:hover {
+.wrapper main .inner .cost-block-item-list ul li .tooltip:hover {
   background: url(../img/icon_question_pink.svg) no-repeat;
 }
-.wrapper main .inner .cost-block-item-table-list ul li .tooltip:hover span {
+.wrapper main .inner .cost-block-item-list ul li .tooltip:hover span {
   opacity: 1;
   visibility: visible;
   z-index: 1;
 }
-.wrapper main .inner .cost-block-item-table-list ul li .tooltip span {
+.wrapper main .inner .cost-block-item-list ul li .tooltip span {
   position: absolute;
   left: calc(100% + 7px);
   top: -12px;
@@ -1246,7 +1249,7 @@ ul.list li:before {
   cursor: unset;
   visibility: hidden;
 }
-.wrapper main .inner .cost-block-item-table-list ul li .tooltip span:before {
+.wrapper main .inner .cost-block-item-list ul li .tooltip span:before {
   content: '';
   position: absolute;
   left: 0;
@@ -1265,7 +1268,10 @@ ul.list li:before {
   margin-top: 25px;
 }
 .wrapper main .inner .cost-block-item-line-point {
-  width: 50%;
+  width: calc(50% - 10px);
+}
+.wrapper main .inner .cost-block-item-line-point:first-child {
+  margin-right: 20px;
 }
 .wrapper main .inner .cost-block-item-line-point-value {
   font: 500 22px/1.2 'Gilroy', sans-serif;
